--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,13 +15,15 @@
 @import "components/_buttons";
 @import "components/_forms";
 @import "components/_navigation";
+@import "components/_shoko";
+@import "components/_texteffects";
 
 // Layout Styles
 @import "layout/_header";
 @import "layout/_footer";
 
 // Sections Styles
-@import "sections/_contact";
+@import "sections/_form";
 @import "sections/_events";
 @import "sections/_faq";
 @import "sections/_friends";
