--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     Mixins
 ============= */
 /* ---------------- Font Sizing ---------------- */
+@import url(http://fonts.googleapis.com/css?family=Raleway:200,500,700,800);
 html {
   font-size: 100%; }
 
@@ -489,7 +490,13 @@ a:link {
     transition: 0.25s;
     width: 100%; }
   #off-canvas-container button:hover {
-    color: #F5A623; }
+    border: none;
+    color: #4A4A4A;
+    background-color: #4A4A4A; }
+  #off-canvas-container i:hover {
+    border: none;
+    background-color: none;
+    color: white; }
   #off-canvas-container ul li {
     border: none;
     outline: none;
@@ -534,6 +541,100 @@ a:link {
 #burger-icon:hover {
   background-color: #000;
   color: #F5A623; }
+
+/* Shoko */
+.input--shoko {
+  overflow: hidden; }
+
+.input__field--shoko {
+  padding: 0;
+  width: 100%;
+  background: transparent;
+  color: #4A4A4A;
+  font-size: 1.55em; }
+
+.input__label--shoko {
+  position: absolute;
+  left: 0;
+  display: block;
+  width: 100%;
+  text-align: left;
+  padding: 0em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #D5F8FF;
+  pointer-events: none;
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  -webkit-transition: -webkit-transform 0.2s 0.1s, color 0.3s;
+  transition: transform 0.2s 0.1s, color 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out; }
+
+.graphic--shoko {
+  stroke: #A09C9C;
+  pointer-events: none;
+  stroke-width: 2px;
+  bottom: 0px;
+  height: 3.275em;
+  -webkit-transition: -webkit-transform 0.7s, stroke 0.7s;
+  transition: transform 0.7s, stroke 0.7s;
+  -webkit-transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+  transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1); }
+
+.input__field--shoko:focus + .input__label--shoko,
+.input--filled .input__label--shoko {
+  color: #A58282;
+  -webkit-transform: translate3d(0, 3.5em, 0) scale3d(0.85, 0.85, 1);
+  transform: translate3d(0, 3.5em, 0) scale3d(0.85, 0.85, 1); }
+
+.input__field--shoko:focus ~ .graphic--shoko,
+.input--filled .graphic--shoko {
+  stroke: #A58282;
+  -webkit-transform: translate3d(-66.6%, 0, 0);
+  transform: translate3d(-66.6%, 0, 0); }
+
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+  font-family: 'codropsicons';
+  src: url("../fonts/codropsicons/codropsicons.eot");
+  src: url("../fonts/codropsicons/codropsicons.eot?#iefix") format("embedded-opentype"), url("../fonts/codropsicons/codropsicons.woff") format("woff"), url("../fonts/codropsicons/codropsicons.ttf") format("truetype"), url("../fonts/codropsicons/codropsicons.svg#codropsicons") format("svg"); }
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.clearfix:before, .clearfix:after {
+  content: '';
+  display: table; }
+
+.clearfix:after {
+  clear: both; }
+
+body a {
+  color: #4BC1B4;
+  text-decoration: none;
+  outline: none; }
+
+body a:hover, body a:focus {
+  color: #4A4A4A; }
+
+.container {
+  margin: 0 auto;
+  text-align: center;
+  overflow: hidden; }
+
+.content {
+  font-size: 150%;
+  padding: 3em 0; }
+  .content h2 {
+    margin: 0 0 2em;
+    opacity: 0.1; }
+  .content p {
+    margin: 1em 0;
+    padding: 5em 0 0 0;
+    font-size: 0.65em; }
 
 /* =============
     Header
@@ -592,9 +693,9 @@ footer {
       justify-content: center; }
 
 /* =============
-    Contact
+    Form
 ============= */
-#contact {
+#form {
   background: #4A4A4A;
   display: grid;
   padding: 0px 0px 80px 0px;
@@ -602,30 +703,18 @@ footer {
   grid-template-areas: ". form .";
   grid-template-columns: 20% 60% 20%; }
   @media (min-width: 789px) {
-    #contact {
+    #form {
       grid-template-columns: 30% 40% 30%; } }
   @media (min-width: 968px) {
-    #contact {
+    #form {
       grid-template-columns: 35% 30% 35%; } }
-  #contact > div {
+  #form > div {
     grid-area: form; }
-    #contact > div h1 {
+    #form > div h1 {
       padding: 48px 0px 16px;
       color: #D5F8FF; }
-    #contact > div form {
+    #form > div form {
       padding: 0px; }
-      #contact > div form input {
-        background-color: #000;
-        border: none;
-        border-bottom: 4px solid #4BC1B4;
-        color: #D5F8FF;
-        display: block;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 400;
-        margin: 16px 0;
-        outline: none;
-        padding: 16px 8px;
-        width: 100%; }
 
 /* =============
     Events
@@ -661,7 +750,8 @@ footer {
     position: relative;
     top: 24px; }
   #events > div:nth-child(1) {
-    grid-area: 'events'; }
+    grid-area: 'events';
+    height: 312px; }
   #events > div:nth-child(2) {
     grid-area: 'events1';
     background-color: #94C83D;
@@ -678,6 +768,14 @@ footer {
     background-color: #F5A623;
     padding: 24px 24px 0px;
     margin: 24px 24px 56px; }
+  #events div div {
+    height: 120px; }
+    @media (min-width: 968px) {
+      #events div div {
+        height: 160px; } }
+    @media (min-width: 1210px) {
+      #events div div {
+        height: 120; } }
 
 /* =============
     FAQ
@@ -857,24 +955,21 @@ footer {
     Hero
 ============= */
 #hero {
+  display: grid;
   grid-template-areas: "heroimg" "herotext";
   grid-template-rows: repeat(2, auto);
   grid-template-columns: repeat(2, auto); }
   @media (min-width: 789px) {
     #hero {
       grid-template-areas: "herotext heroimg";
-      grid-template-columns: repeat(2, auto);
+      grid-template-columns: 40% 60%;
       grid-template-rows: repeat(1, auto); } }
   @media (min-width: 968px) {
     #hero {
-      grid-template-columns: repeat(2, auto);
+      grid-template-columns: 30% 70%;
       grid-template-rows: repeat(1, auto); } }
-  @media (min-width: 1210px) {
-    #hero {
-      grid-template-columns: 480px auto; } }
   #hero > div:nth-child(1) {
     grid-area: heroimg;
-    background-image: url("../img/hero/hero.jpg");
     background-size: cover;
     width: 100%;
     background-repeat: no-repeat;
@@ -908,6 +1003,12 @@ footer {
     @media (min-width: 1210px) {
       #hero > div:nth-child(2) {
         height: 720px; } }
+
+#trailsvg {
+  z-index: 3;
+  position: relative;
+  width: 100%;
+  top: -120px; }
 
 /* =============
     Plan
@@ -1007,75 +1108,76 @@ footer {
     Trail
 ============= */
 #trail {
-  background-color: #fff;
-  display: grid;
-  grid-template-areas: "trailtop" "forbiddentrail" "whitetrail" "orangetrail" "yellowtrail";
-  grid-template-rows: repeat(5, auto);
-  grid-template-columns: repeat(1, auto); }
-  @media (min-width: 789px) {
-    #trail {
-      grid-template-areas: "trailtop forbiddentrail" "orangetrail orangetrail" "whitetrail yellowtrail";
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, auto); } }
-  @media (min-width: 968px) {
-    #trail {
-      grid-template-areas: "forbiddentrail trailtop" "whitetrail orangetrail" ". yellowtrail";
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, auto); } }
-  @media (min-width: 1210px) {
-    #trail {
-      grid-template-areas: "forbiddentrail whitetrail trailtop" ". orangetrail yellowtrail";
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, auto); } }
-  #trail h2 {
-    padding: 80px 24px 40px 24px; }
-    #trail h2 span {
-      color: #4BC1B4; }
-  #trail > div:nth-child(1) {
+  background-color: #fff; }
+  #trail > aside > div:nth-child(1) {
     background-color: #4BC1B4;
     height: 32px; }
-  #trail > div:nth-child(2) {
+  #trail > aside > div:nth-child(2) {
     background-color: #F5DA4C;
     height: 48px; }
-  #trail > div:nth-child(3) {
+  #trail > aside > div:nth-child(3) {
     background-color: #FCF4DA;
     height: 16px; }
-  #trail > div:nth-child(4) {
+  #trail > aside > div:nth-child(4) {
     background-color: #F5A623;
     height: 40px; }
-  #trail div div {
-    margin-bottom: 72px;
-    padding-left: 16px; }
-    #trail div div h3 {
-      font-family: 'DM Serif Text', serif;
-      padding-bottom: 8px; }
-    #trail div div p {
-      padding-bottom: 12px; }
-    #trail div div span {
-      font-family: 'Poppins', sans-serif;
-      font-size: 1.125rem; }
-  #trail > div:nth-child(6) {
-    grid-area: trailtop; }
-  #trail > div:nth-child(6) {
-    grid-area: frobiddentrail;
-    border-left: 8px solid #4BC1B4; }
-    #trail > div:nth-child(6) span {
-      background-color: #4BC1B4; }
-  #trail > div:nth-child(7) {
-    grid-area: whitetrail;
-    border-left: 8px solid #FCF4DA; }
-    #trail > div:nth-child(7) span {
-      background-color: #FCF4DA; }
-  #trail > div:nth-child(8) {
-    grid-area: orangetrail;
-    border-left: 8px solid #F5A623; }
-    #trail > div:nth-child(8) span {
-      background-color: #F5A623; }
-  #trail > div:nth-child(9) {
-    grid-area: yellowtrail;
-    border-left: 8px solid #F5DA4C; }
-    #trail > div:nth-child(9) span {
-      background-color: #F5DA4C; }
+  #trail > section {
+    display: grid;
+    grid-template-areas: "trailtop" "forbiddentrail" "whitetrail" "orangetrail" "yellowtrail";
+    grid-template-rows: repeat(5, auto);
+    grid-template-columns: repeat(1, auto); }
+    @media (min-width: 789px) {
+      #trail > section {
+        grid-template-areas: "trailtop forbiddentrail" "orangetrail orangetrail" "whitetrail yellowtrail";
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, auto); } }
+    @media (min-width: 968px) {
+      #trail > section {
+        grid-template-areas: "forbiddentrail trailtop" "whitetrail orangetrail" ". yellowtrail";
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, auto); } }
+    @media (min-width: 1210px) {
+      #trail > section {
+        grid-template-areas: "forbiddentrail whitetrail trailtop" ". orangetrail yellowtrail";
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, auto); } }
+    #trail > section h2 {
+      padding: 80px 24px 40px 24px; }
+      #trail > section h2 span {
+        color: #4BC1B4; }
+    #trail > section div div {
+      margin-bottom: 72px;
+      padding-left: 16px; }
+      #trail > section div div h3 {
+        font-family: 'DM Serif Text', serif;
+        padding-bottom: 8px; }
+      #trail > section div div p {
+        padding-bottom: 12px; }
+      #trail > section div div span {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.125rem; }
+    #trail > section > div:nth-child(1) {
+      grid-area: trailtop; }
+    #trail > section > div:nth-child(2) {
+      grid-area: frobiddentrail;
+      border-left: 8px solid #4BC1B4; }
+      #trail > section > div:nth-child(2) span {
+        background-color: #4BC1B4; }
+    #trail > section > div:nth-child(3) {
+      grid-area: whitetrail;
+      border-left: 8px solid #FCF4DA; }
+      #trail > section > div:nth-child(3) span {
+        background-color: #FCF4DA; }
+    #trail > section > div:nth-child(4) {
+      grid-area: orangetrail;
+      border-left: 8px solid #F5A623; }
+      #trail > section > div:nth-child(4) span {
+        background-color: #F5A623; }
+    #trail > section > div:nth-child(5) {
+      grid-area: yellowtrail;
+      border-left: 8px solid #F5DA4C; }
+      #trail > section > div:nth-child(5) span {
+        background-color: #F5DA4C; }
   #trail aside {
     height: 160px;
     background-image: url("../img/hills/green-hill.png");
