--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -186,3 +186,13 @@ html {
 @mixin section-padding{
     padding: 0px 0px 80px 0px;
 }
+
+@mixin event-size{
+    height: 120px;
+    @include lg{
+        height: 160px;
+    }
+    @include xl{
+        height: 120;
+    }
+}
