--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,8 +3,8 @@
 ============= */
 
 header{
-    // background-color: $light;
-    // height: 56px;
+    background-color: $off-white;
+    height: 72px;
     width: 100%;
     position: fixed;
     z-index: 100;
