--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,3 +4,9 @@
 button {
     @include btn-style;
 }
+
+button:hover{
+    background: $sun;
+    border-bottom: 4px solid $orange;
+    transition: background 1.5s;
+}
