--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -143,7 +143,7 @@ html {
 }
 
 @mixin shadow-style-light{
-    box-shadow: 0 7px 16px 2px rgba(206,206,206,0.40);
+    box-shadow: 0 7px 16px 2px rgba(206,206,206,0.20);
 }
 
 @mixin shadow-style-dark{
@@ -152,21 +152,16 @@ html {
 
 
 @mixin btn-style{
-    background: $light;
     border: none;
     outline: none;
-    border-bottom: 4px solid $agua;
-    color: $black;
     font-family: 'Poppins', sans-serif;
     font-size: rem-calc(16);
     letter-spacing: rem-calc(1.5);
     line-height: rem-calc(24);
     padding: 8px 16px 4px;
-    :hover{
-        background: $orange;
-        border-bottom: 4px solid $sun;
-        color: $white;
-    }
+    color: $black;
+    border-bottom: 4px solid $agua;
+    background: $light;
 }
 
 @mixin link-style{
@@ -184,5 +179,94 @@ html {
 }
 
 @mixin section-padding{
-    padding: 0px 0px 80px 0px;
+    padding: 40px 16px 80px 16px;
+    @include lg{
+        padding: 80px 24px 160px 24px;
+    }
+}
+
+@mixin hero-height{
+    @include sm{
+        height: 280px;
+    }
+    @include md{
+        height: 520px;
+    }
+    @include lg{
+        height: 740px;
+    }
+    @include xl{
+        height: 800px;
+    }
+}
+
+@mixin header-padding{
+    padding: 0 16px 24px;
+    @include md{
+        padding: 0 24px;
+    }
+    @include lg{
+        padding: 0 32px;
+    }
+    @include xl{
+        padding: 0 48px;
+    }
+}
+
+@mixin h2-respons{
+    font-size: rem-calc(32);
+    line-height: rem-calc(40);
+    @include md{
+        font-size: rem-calc(40);
+        line-height: rem-calc(48);
+    }
+    @include lg{
+        font-size: rem-calc(48);
+        line-height: rem-calc(56);
+    }
+}
+
+@mixin span-respons{
+    font-size: rem-calc(40);
+    line-height: rem-calc(40);
+    @include md{
+        font-size: rem-calc(48);
+        line-height: rem-calc(56);
+    }
+    @include lg{
+        font-size: rem-calc(56);
+        line-height: rem-calc(64);
+    }
+}
+
+@mixin card-padding{
+    padding: 16px;
+    @include md{
+        padding: 16px 24px;
+    }
+    @include lg{
+        padding: 40px 32px;
+    }
+    :hover{
+        box-shadow: 0 7px 24px 2px rgba(206,206,206,0.60);
+    }
+}
+
+@mixin colored-circles{
+    border-radius: 24px;
+    height: 24px;
+    margin: 0 8px 0 0;
+    width: 24px;
+    @include md{
+        border-radius: 32px;
+        height: 32px;
+        margin: 0 24px 0 0;
+        width: 32px;
+    }
+    @include lg{
+        border-radius: 40px;
+        height: 40px;
+        margin: 0 32px 0 0;
+        width: 40px;
+    }
 }
