--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -19,6 +19,10 @@ footer{
         grid-template-columns: 30% 40% 30%;
     }
 
+    @include lg{
+        grid-template-columns: auto 480px auto;
+    }
+
 
     div{
         grid-area: footer;
