--- a/scss/sections/_friends.scss
+++ b/scss/sections/_friends.scss
@@ -3,24 +3,27 @@
 ============= */
 
 #friends{
-    padding: 80px 24px;
+    @include section-padding;
     // background: $off-white;
 
 
     h2 {
         color: $black;
-        padding-bottom: 24px;
+        @include header-padding;
+        margin-bottom: 24px;
         span {
             color: $agua;
         }
     }
 
     p{
-        padding-bottom: 24px;
+        @include header-padding;
+        color: $midnight;
     }
 
     .friend-card{
-        margin: 24px 0;
+
+        @include card-padding;
 
         h3{
             padding: 8px 24px;
@@ -35,6 +38,7 @@
         span{
             font-family: 'Poppins', sans-serif;
             font-size: rem-calc(18);
+            color: $midnight;
         }
     }
 
@@ -55,18 +59,20 @@
         "card1"
         "card2";
         grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(1, auto);
+        grid-gap: 24px;
 
         @include md{
             grid-template-areas:
-            ". card2"
-            "card1 card2"
-            "card1 card2"
-            "card1 card2"
-            "card1 card2"
-            "card1 .";
+            ". . card2 ."
+            ". card1 card2 ."
+            ". card1 card2 ."
+            ". card1 card2 ."
+            ". card1 card2 ."
+            ". card1 . .";
             grid-template-rows: repeat(6, auto);
-            grid-template-columns: repeat(2, auto);
-            grid-gap: 40px;
+            grid-template-columns: auto 40% 40% auto;
+            grid-gap: 32px;
         }
 
         @include lg{
@@ -79,35 +85,28 @@
             ". card1 . .";
             grid-template-rows: repeat(6, auto);
             grid-template-columns: repeat(4, auto);
-            grid-gap: 40px;
         }
 
-        // @include lg{
-        //     grid-template-areas:
-        //     "card1 card1 card1"
-        //     "card2 card2 card2";
-        //     display: flex;
-        //     grid-template-columns: repeat(3, auto);
-        //     grid-template-rows: repeat(2, auto);
-        //     grid-gap: 40px;
-        // }
+
 
         ul:nth-child(1){
             grid-area: card1;
             li{
-                background-color: $light;
-                border-bottom: 8px solid $agua;
+                // border-bottom: 8px solid $agua;
+                h3{
+                    background-color: $light;
+                }
             }
         }
 
         ul:nth-child(2){
             grid-area: card2;
             li{
-                background-color: $sun;
-                border-bottom: 8px solid $orange;
+                // border-bottom: 8px solid $orange;
+                h3{
+                    background-color: $sun;
+                }
             }
         }
     }
-
-
 }
