--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,12 +21,14 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_bars";
 @import "sections/_contact";
 @import "sections/_events";
 @import "sections/_faq";
 @import "sections/_friends";
 @import "sections/_gallery";
 @import "sections/_hero";
+@import "sections/_hills";
 @import "sections/_plan";
 @import "sections/_trail";
 @import "sections/_visit";
