--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -28,8 +28,8 @@ footer{
         grid-area: footer;
         h1{
             color: $black;
-            text-decoration: underline;
-            text-decoration-color: $agua;
+            // text-decoration: underline;
+            // text-decoration-color: $agua;
             font-family: 'DM Serif Text', serif;
             font-size: rem-calc(32);
             letter-spacing: 1px;
