--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -30,7 +30,7 @@
         form {
             padding: 0px;
 
-            input {
+            input,textarea {
                 background-color: $black;
                 border: none;
                 border-bottom: 4px solid $agua;
