--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ h1 {
     color: #FCF4DA;
     font-family: 'DM Serif Text', serif;
     font-size: 3.5rem;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     line-height: 3.5rem; }
 
 h2 {
@@ -558,6 +558,19 @@ a:link {
     padding: 8px 12px 6px 12px; }
 
 /* =============
+    Thanks
+============= */
+#thanks {
+  background-color: #FCF4DA;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+  #thanks h1 {
+    padding-bottom: 56px; }
+
+/* =============
     Header
 ============= */
 header {
@@ -594,8 +607,6 @@ footer {
     grid-area: footer; }
     footer div h1 {
       color: #000;
-      text-decoration: underline;
-      text-decoration-color: #4BC1B4;
       font-family: 'DM Serif Text', serif;
       font-size: 2rem;
       letter-spacing: 1px;
@@ -679,7 +690,7 @@ footer {
       color: #D5F8FF; }
     #contact > div form {
       padding: 0px; }
-      #contact > div form input {
+      #contact > div form input, #contact > div form textarea {
         background-color: #000;
         border: none;
         border-bottom: 4px solid #4BC1B4;
@@ -719,7 +730,7 @@ footer {
       grid-gap: 0 16px; } }
   #events h2 {
     color: #D5F8FF;
-    padding: 0 16px 24px;
+    padding: 40px 16px 40px;
     margin-top: 40px; }
     @media (min-width: 700px) {
       #events h2 {
@@ -762,7 +773,7 @@ footer {
   display: grid;
   grid-template-areas: "faq ." "questions questions" "faqimg faqimg";
   grid-template-rows: repeat(2, auto);
-  grid-template-columns: 45% 55%;
+  grid-template-columns: 70% 30%;
   grid-gap: 0; }
   @media (min-width: 968px) {
     #faq {
@@ -896,7 +907,7 @@ footer {
       padding: 80px 24px 160px 24px; } }
   #friends h2 {
     color: #000;
-    padding: 0 16px 24px;
+    padding: 40px 16px 40px;
     margin-bottom: 24px; }
     @media (min-width: 700px) {
       #friends h2 {
@@ -910,7 +921,7 @@ footer {
     #friends h2 span {
       color: #4BC1B4; }
   #friends p {
-    padding: 0 16px 24px;
+    padding: 40px 16px 40px;
     color: #4A4A4A; }
     @media (min-width: 700px) {
       #friends p {
@@ -943,92 +954,92 @@ footer {
       font-size: 1.125rem;
       color: #4A4A4A; }
   @media (min-width: 700px) {
-    #friends div:nth-child(2) {
+    #friends div:nth-child(1) {
       width: 40%;
       margin-left: 24px; } }
-  #friends div:nth-child(3) {
+  #friends div:nth-child(2) {
     display: grid;
     grid-template-areas: "card1" "card2";
     grid-template-rows: repeat(2, auto);
     grid-template-columns: repeat(1, auto);
     grid-gap: 24px; }
     @media (min-width: 700px) {
-      #friends div:nth-child(3) {
+      #friends div:nth-child(2) {
         grid-template-areas: ". . card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 . .";
         grid-template-rows: repeat(6, auto);
         grid-template-columns: auto 40% 40% auto;
         grid-gap: 32px; } }
     @media (min-width: 968px) {
-      #friends div:nth-child(3) {
+      #friends div:nth-child(2) {
         grid-template-areas: ". . card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 . .";
         grid-template-rows: repeat(6, auto);
         grid-template-columns: repeat(4, auto); } }
-    #friends div:nth-child(3) ul:nth-child(1) {
+    #friends div:nth-child(2) ul:nth-child(1) {
       grid-area: card1; }
-      #friends div:nth-child(3) ul:nth-child(1) li h3 {
+      #friends div:nth-child(2) ul:nth-child(1) li h3 {
         background-color: #D5F8FF; }
-    #friends div:nth-child(3) ul:nth-child(2) {
+    #friends div:nth-child(2) ul:nth-child(2) {
       grid-area: card2; }
-      #friends div:nth-child(3) ul:nth-child(2) li h3 {
+      #friends div:nth-child(2) ul:nth-child(2) li h3 {
         background-color: #F5DA4C; }
 
 /* =============
     Gallery
 ============= */
-#gallery div {
+#gallery-trail div {
   background-color: #fff; }
 
-#gallery ul {
+#gallery-trail ul {
   display: grid;
   grid-gap: 24px;
   margin: 0 auto; }
   @media (min-width: 498px) {
-    #gallery ul {
+    #gallery-trail ul {
       grid-template-areas: ". agua . ." ". gallery5 gallery5 ." ". . orange .";
       grid-template-columns: auto 50% 35% auto;
       grid-template-rows: 24px 320px 64px; } }
   @media (min-width: 700px) {
-    #gallery ul {
+    #gallery-trail ul {
       grid-gap: 32px;
       grid-template-areas: ". gallery1 . ." ". gallery1 agua ." ". gallery1 gallery3 ." ". gallery2 gallery3 ." ". . gallery3 .";
       grid-template-columns: auto 40% 45% auto;
       grid-template-rows: 80px 40px 80px 240px 80px; } }
   @media (min-width: 968px) {
-    #gallery ul {
+    #gallery-trail ul {
       grid-gap: 24px;
       grid-template-areas: "gallery1 . . . . ." "gallery1 gallery4 gallery4 . . ." ". gallery2 gallery2 gallery2 gallery3 ." ". gallery2 gallery2 gallery2 gallery3 orange" ". . agua agua gallery3 gallery5" ". . . sun gallery3 gallery5";
       margin: 0 auto;
       grid-template-columns: 15% auto 10% 10% 22% auto;
       grid-template-rows: 80px 120px 80px 120px 40px 240px; } }
-  #gallery ul li {
+  #gallery-trail ul li {
     background-size: cover;
     height: 100%; }
-  #gallery ul li:nth-child(1) {
+  #gallery-trail ul li:nth-child(1) {
     background-image: url("../img/gallery/gallery1.jpg");
     grid-area: gallery1; }
-  #gallery ul li:nth-child(2) {
+  #gallery-trail ul li:nth-child(2) {
     background-image: url("../img/gallery/gallery2.jpg");
     background-position: top center;
     grid-area: gallery2; }
-  #gallery ul li:nth-child(3) {
+  #gallery-trail ul li:nth-child(3) {
     background-image: url("../img/gallery/gallery3.jpg");
     grid-area: gallery3;
     background-position: center; }
-  #gallery ul li:nth-child(4) {
+  #gallery-trail ul li:nth-child(4) {
     background-image: url("../img/gallery/gallery4.jpg");
     grid-area: gallery4;
     background-position: top center; }
-  #gallery ul li:nth-child(5) {
+  #gallery-trail ul li:nth-child(5) {
     background-image: url("../img/gallery/gallery5.jpg");
     background-position: bottom;
     grid-area: gallery5; }
-  #gallery ul li:nth-child(6) {
+  #gallery-trail ul li:nth-child(6) {
     background-color: #4BC1B4;
     grid-area: agua; }
-  #gallery ul li:nth-child(7) {
+  #gallery-trail ul li:nth-child(7) {
     background-color: #F5DA4C;
     grid-area: sun; }
-  #gallery ul li:nth-child(8) {
+  #gallery-trail ul li:nth-child(8) {
     background-color: #F5A623;
     grid-area: orange; }
 
@@ -1039,7 +1050,8 @@ footer {
   display: grid;
   grid-template-areas: "heroimg" "herotext";
   grid-template-columns: repeat(1, auto);
-  grid-template-rows: repeat(2, auto); }
+  grid-template-rows: 300px auto;
+  margin: 0 auto; }
   @media (min-width: 700px) {
     #hero {
       grid-template-areas: "herotext heroimg";
@@ -1056,10 +1068,11 @@ footer {
     background-size: cover;
     display: flex;
     grid-area: heroimg;
-    width: 100%; }
+    width: 100%;
+    margin: 0 auto; }
     @media (min-width: 498px) {
       #hero > div:nth-child(1) {
-        height: 280px; } }
+        height: 340px; } }
     @media (min-width: 700px) {
       #hero > div:nth-child(1) {
         height: 520px; } }
@@ -1073,7 +1086,7 @@ footer {
     align-items: center;
     display: flex;
     grid-area: herotext;
-    padding: 0 16px 24px;
+    padding: 40px 16px 40px;
     background: linear-gradient(180deg, #4BC1B4 0%, #94C83D 120%); }
     @media (min-width: 700px) {
       #hero > div:nth-child(2) {
@@ -1084,18 +1097,6 @@ footer {
     @media (min-width: 1210px) {
       #hero > div:nth-child(2) {
         padding: 0 48px; } }
-    @media (min-width: 498px) {
-      #hero > div:nth-child(2) {
-        height: 280px; } }
-    @media (min-width: 700px) {
-      #hero > div:nth-child(2) {
-        height: 520px; } }
-    @media (min-width: 968px) {
-      #hero > div:nth-child(2) {
-        height: 740px; } }
-    @media (min-width: 1210px) {
-      #hero > div:nth-child(2) {
-        height: 800px; } }
 
 /* =============
     Hills
@@ -1157,7 +1158,7 @@ footer {
     #plan {
       padding: 80px 24px 160px 24px; } }
   #plan h2 {
-    padding: 0 16px 24px;
+    padding: 40px 16px 40px;
     color: #000; }
     @media (min-width: 700px) {
       #plan h2 {
@@ -1182,12 +1183,14 @@ footer {
     grid-template-rows: repeat(3, auto); }
     @media (min-width: 700px) {
       #plan > div {
-        grid-template-areas: "plantop ." "hike ." "hike run" "bike run" "bike .";
+        grid-template-areas: ". plantop . ." ". hike . ." ". hike run ." ". bike run ." ". bike . .";
+        grid-template-columns: auto 40% 40% auto;
         grid-gap: 40px; } }
     @media (min-width: 968px) {
       #plan > div {
         grid-template-areas: ". bike" "plantop bike" "hike bike" "hike run" ". run";
-        grid-gap: 64px; } }
+        grid-template-columns: 50% 50%;
+        grid-gap: 0px; } }
     @media (min-width: 1210px) {
       #plan > div {
         grid-template-areas: ". hike plantop bike ." ". hike run bike .";
@@ -1283,7 +1286,7 @@ footer {
       grid-template-rows: repeat(2, auto);
       grid-gap: 40px; } }
   #trail h2 {
-    padding: 0 16px 24px; }
+    padding: 40px 16px 40px; }
     @media (min-width: 700px) {
       #trail h2 {
         padding: 0 24px; } }
@@ -1313,7 +1316,7 @@ footer {
   #trail > div:nth-child(1) {
     grid-area: trailtop; }
     #trail > div:nth-child(1) div {
-      padding: 0 16px 24px; }
+      padding: 40px 16px 40px; }
       @media (min-width: 700px) {
         #trail > div:nth-child(1) div {
           padding: 0 24px; } }
