--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -187,7 +187,7 @@ html {
 
 @mixin hero-height{
     @include sm{
-        height: 280px;
+        height: 340px;
     }
     @include md{
         height: 520px;
@@ -201,7 +201,7 @@ html {
 }
 
 @mixin header-padding{
-    padding: 0 16px 24px;
+    padding: 40px 16px 40px;
     @include md{
         padding: 0 24px;
     }
