--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,7 @@
 @import "components/_buttons";
 @import "components/_forms";
 @import "components/_navigation";
+@import "components/_thanks";
 
 // Layout Styles
 @import "layout/_header";
