--- a/css/styles.css
+++ b/css/styles.css
@@ -460,7 +460,7 @@ button {
 button:hover {
   background: #F5DA4C;
   border-bottom: 4px solid #F5A623;
-  transition: background 1.5s; }
+  transition: 0.5s; }
 
 /* =============
     Forms
@@ -609,7 +609,6 @@ footer {
       color: #000;
       font-family: 'DM Serif Text', serif;
       font-size: 2rem;
-      letter-spacing: 1px;
       line-height: 2.5rem;
       text-align: center;
       padding: 0px 0px 16px; }
@@ -821,8 +820,9 @@ footer {
       text-decoration: underline;
       text-decoration-color: #4BC1B4; }
       #faq > div:nth-child(2) a:hover {
-        background-color: #F5A623;
-        color: #fff; }
+        color: #F5A623;
+        text-decoration: underline;
+        text-decoration-color: #F5A623; }
     #faq > div:nth-child(2) div {
       display: flex; }
       #faq > div:nth-child(2) div div:nth-child(1),
@@ -1048,13 +1048,13 @@ footer {
 ============= */
 #hero {
   display: grid;
-  grid-template-areas: "heroimg" "herotext";
+  grid-template-areas: "video" "herotext";
   grid-template-columns: repeat(1, auto);
-  grid-template-rows: 300px auto;
+  grid-template-rows: auto 300px;
   margin: 0 auto; }
   @media (min-width: 700px) {
     #hero {
-      grid-template-areas: "herotext heroimg";
+      grid-template-areas: "herotext video";
       grid-template-columns: 40% auto;
       grid-template-rows: repeat(1, auto); } }
   @media (min-width: 968px) {
@@ -1062,14 +1062,12 @@ footer {
       grid-template-columns: 30% auto;
       grid-template-rows: repeat(1, auto); } }
   #hero > div:nth-child(1) {
-    background-image: url("../img/hero/hero.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
     display: flex;
-    grid-area: heroimg;
-    width: 100%;
-    margin: 0 auto; }
+    grid-area: video;
+    height: 50vh;
+    width: 100vw;
+    margin: 0;
+    object-fit: fill; }
     @media (min-width: 498px) {
       #hero > div:nth-child(1) {
         height: 340px; } }
@@ -1082,6 +1080,9 @@ footer {
     @media (min-width: 1210px) {
       #hero > div:nth-child(1) {
         height: 800px; } }
+    #hero > div:nth-child(1) video {
+      width: 100%;
+      height: 100%; }
   #hero > div:nth-child(2) {
     align-items: center;
     display: flex;
@@ -1184,7 +1185,7 @@ footer {
     @media (min-width: 700px) {
       #plan > div {
         grid-template-areas: ". plantop . ." ". hike . ." ". hike run ." ". bike run ." ". bike . .";
-        grid-template-columns: auto 40% 40% auto;
+        grid-template-columns: auto 35% 35% auto;
         grid-gap: 40px; } }
     @media (min-width: 968px) {
       #plan > div {
