--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -8,5 +8,5 @@ button {
 button:hover{
     background: $sun;
     border-bottom: 4px solid $orange;
-    transition: background 1.5s;
+    transition: 0.5s;
 }
