--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -1,44 +1,45 @@
 /* =============
     Hero
 ============= */
-#hero{
+#hero {
     display: grid;
     grid-template-areas:
-    "heroimg"
+    "video"
     "herotext";
     grid-template-columns: repeat(1, auto);
-    grid-template-rows: 300px auto;
+    grid-template-rows: auto 300px;
     margin: 0 auto;
-
-    @include md{
+    @include md {
         grid-template-areas:
-        "herotext heroimg";
+        "herotext video";
         grid-template-columns: 40% auto;
         grid-template-rows: repeat(1, auto);
     }
-
-    @include lg{
+    @include lg {
         grid-template-columns: 30% auto;
         grid-template-rows: repeat(1, auto);
     }
 
-
-    >div:nth-child(1){
-        background-image: url('../img/hero/hero.jpg');
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
+    > div:nth-child(1) {
+        // background-image: url("../img/hero/hero.jpg");
+        // background-position: center center;
+        // background-repeat: no-repeat;
+        // background-size: cover;
         display: flex;
-        grid-area: heroimg;
-        width: 100%;
-        margin: 0 auto;
+        grid-area: video;
+        height: 50vh;
+  width: 100vw;
+        margin: 0;
         @include hero-height;
-
+        object-fit: fill;
+        video{
+            width: 100%;
+            height: 100%;
+        }
 
     }
 
-
-    >div:nth-child(2){
+    > div:nth-child(2) {
         align-items: center;
         display: flex;
         grid-area: herotext;
@@ -47,3 +48,12 @@
         // @include hero-height;
     }
 }
+
+
+// #myVideo {
+//   position: fixed;
+//   right: 0;
+//   bottom: 0;
+//   min-width: 100%;
+//   min-height: vh100;
+// }
